CCMenu Release Notes

CCMenu 15.0

* New mode for menu bar icon. In this mode, the icon uses colour when at
  least one build is failing. Otherwise it uses the black and white variant.
* Slightly darkened the green icons to increase contrast in tinted menus.
* Fix for redirect requests when authentication must be pushed.
* Fix for problems with non-Georgian calendars.


CCMenu 14.0

* Advanced preferences now have a check box to set whether CCMenu should
  open automatically when logging in. This is functionally the same as adding
  CCMenu to the login items in System Preferences.
* The sheet to add new projects is now resizable so that large list and long
  project names can be managed.


CCMenu 13.0

* Projects can now be given a display name that is shown instead of the name
  the project has on the Continuous Integration server.
* CCMenu now registers its own URL schemes. This makes it possible to create
  links on webpages that, when clicked, will open CCMenu and show a prefilled
  list of projects to add (see website for details).
* When adding or removing projects, the build timing for other projects is
  now retained.
* It is now possible to use a proxy when accessing CI servers that require
  authentication. Attempting this before triggered a bug in Apple's libraries,
  and this version of CCMenu adds a workaround for that bug.


CCMenu 12.1

* Fix for incompatibility with OS X 10.8/10.9 that was introduced in
  CCMenu 12.0.


CCMenu 12.0

* When not displaying black and white icons, the use of symbols is now
  optional for states in which the server is idle . This makes it possible to
  revert to the display style used before the introduction of the new icons.
* Notifications can be sent when a build is starting on the server.
* Projects with a successful last build can be hidden from the menu.
* When sorting projects alphabetically case is now ignored.
* Authentication works with Cloudbees servers.